--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:main": "vitest run -r packages/main --passWithNoTests",
     "test:preload": "vitest run -r packages/preload --passWithNoTests",
     "test:renderer": "vitest run -r packages/renderer --passWithNoTests",
-    "watch": "node scripts/watch.mjs",
+    "dev": "node scripts/watch.mjs",
     "lint": "eslint . --ext js,mjs,cjs,ts,mts,cts,vue",
     "typecheck:main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck:preload": "tsc --noEmit -p packages/preload/tsconfig.json",
@@ -31,7 +31,10 @@
   },
   "devDependencies": {
     "@types/node": "18.11.13",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-vue": "4.0.0",
     "@vue/test-utils": "2.2.6",
     "cross-env": "7.0.3",
@@ -50,7 +53,10 @@
     "vue-tsc": "1.0.13"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^3.0.0",
     "electron-updater": "5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vue": "3.2.45"
   }
 }
