--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,11 +22,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
-      - run: npm ci
+          cache: 'pnpm'
+      - run: pnpm ci
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-      - run: npm run test:${{ matrix.package }} --if-present
+      - run: pnpm run test:${{ matrix.package }} --if-present
 
   e2e:
     strategy:
@@ -39,15 +39,15 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
-      - run: npm ci
+          cache: 'pnpm'
+      - run: pnpm ci
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
 
         # I ran into problems trying to run an electron window in ubuntu due to a missing graphics server.
         # That's why this special command for Ubuntu is here
-      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test:e2e --if-present
+      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm run test:e2e --if-present
         if: matrix.os == 'ubuntu-latest'
 
-      - run: npm run test:e2e --if-present
+      - run: pnpm run test:e2e --if-present
         if: matrix.os != 'ubuntu-latest'
