--- a/.github/workflows/typechecking.yml
+++ b/.github/workflows/typechecking.yml
@@ -17,11 +17,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16 # Need for npm >=7.7
-          cache: 'npm'
+          node-version: 16 # Need for pnpm >=7.7
+          cache: 'pnpm'
 
-      - run: npm ci
+      - run: pnpm ci
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
 
-      - run: npm run typecheck --if-present
+      - run: pnpm run typecheck --if-present
