--- a/.github/workflows/typechecking.yml
+++ b/.github/workflows/typechecking.yml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6.32.9
       - uses: actions/setup-node@v3
         with:
           node-version: 16 # Need for pnpm >=7.7
