--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "pnpm run build:main && pnpm run build:preload && pnpm run build:renderer",
     "build:main": "cd ./packages/main && vite build",
     "build:preload": "cd ./packages/preload && vite build",
-    "build:renderer": "cd ./packages/renderer && vite build",
+    "build:renderer": "vite build --config ./packages/renderer/vite.config.js",
     "compile": "cross-env MODE=production pnpm run build && electron-builder build --config .electron-builder.config.js --dir --config.asar=false",
     "test": "pnpm run test:main && pnpm run test:preload && pnpm run test:renderer && pnpm run test:e2e",
     "test:e2e": "pnpm run build && vitest run",
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-vue": "4.0.0",
     "@vue/test-utils": "2.2.6",
+    "autoprefixer": "^10.4.13",
     "cross-env": "7.0.3",
     "electron": "22.0.0",
     "electron-builder": "23.6.0",
@@ -45,7 +46,10 @@
     "happy-dom": "8.1.0",
     "nano-staged": "0.8.0",
     "playwright": "1.27.1",
+    "postcss": "^8.4.20",
+    "sass": "^1.56.2",
     "simple-git-hooks": "2.8.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4",
     "unplugin-auto-expose": "0.0.4",
     "vite": "4.0.0",
