--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "format": "pnpm dlx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,vue,json}\""
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.11.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -37,6 +39,7 @@
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-vue": "4.0.0",
     "@vue/test-utils": "2.2.6",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "cross-env": "7.0.3",
     "electron": "22.0.0",
@@ -49,6 +52,7 @@
     "postcss": "^8.4.20",
     "sass": "^1.56.2",
     "simple-git-hooks": "2.8.1",
+    "tailwind-animatecss": "^1.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4",
     "unplugin-auto-expose": "0.0.4",
