--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
       - run: pnpm i
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-      - run: pnpm run test:${{ matrix.package }} --if-present
+      - run: pnpm run test:${{ matrix.package }}
 
   # e2e:
   #   strategy:
