--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "electron": "22.0.0",
     "electron-builder": "23.6.0",
     "eslint": "8.29.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "9.8.0",
     "happy-dom": "8.1.0",
     "nano-staged": "0.8.0",
