--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -68,4 +68,4 @@ jobs:
           cache: 'pnpm'
 
       - run: pnpm i prettier
-      - run: pnpm dlx prettier --check "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue,json}"
+      - run: pnpm dlx prettier --check "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue}"
