--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^3.0.0",
+    "clsx": "^1.2.1",
     "electron-updater": "5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select": "^5.7.0",
     "vue": "3.2.45"
   }
 }
