--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.13",
+    "@types/ps-node": "^0.1.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "5.46.0",
@@ -65,9 +66,13 @@
     "@vitejs/plugin-react": "^3.0.0",
     "clsx": "^1.2.1",
     "electron-updater": "5.3.0",
+    "lodash.uniqby": "^4.7.0",
+    "ps-node": "^0.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.7.0",
+    "tasklist": "^4.0.1",
+    "usehooks-ts": "^2.9.1",
     "vue": "3.2.45"
   }
 }
