--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ps-node": "^0.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-select": "^5.7.0",
     "tasklist": "^4.0.1",
     "usehooks-ts": "^2.9.1",
