--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vite-electron-builder",
-  "description": "Secure boilerplate for Electron app based on Vite",
-  "version": "1.0.2",
+  "name": "lestudio-game-list",
+  "description": "Able to update your twitch category Id by on your processes",
+  "version": "1.0.0",
   "private": true,
   "author": {
-    "email": "kozackunisoft@gmail.com",
-    "name": "Alex Kozack",
-    "url": "https://kozack.me"
+    "email": "contact@qlaffont.com",
+    "name": "Quentin Laffont",
+    "url": "https://qlaffont.com"
   },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
