fix(ci): fix scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - dev
       - 'renovate/**'
     paths-ignore:
       - '.github/**'
@@ -20,7 +21,6 @@ on:
   pull_request:
     paths-ignore:
       - '.github/**'
-      - '!.github/workflows/ci.yml'
       - '!.github/workflows/typechecking.yml'
       - '!.github/workflows/tests.yml'
       - '!.github/workflows/release.yml'
