--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-select": "^5.7.0",
+    "table-parser": "^1.0.1",
     "tasklist": "^4.0.1",
     "usehooks-ts": "^2.9.1",
     "vue": "3.2.45"
