--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^3.0.0",
     "clsx": "^1.2.1",
+    "connected-domain": "^1.0.0",
     "debounce-promise": "^3.1.2",
     "electron-store": "^8.1.0",
     "electron-updater": "5.3.0",
