--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "electron-store": "^8.1.0",
     "electron-updater": "5.3.0",
     "lodash.uniqby": "^4.7.0",
+    "neat-csv": "^7.0.0",
     "ps-node": "^0.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
