--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^3.0.0",
+    "ajv": "^8.12.0",
     "clsx": "^1.2.1",
     "connected-domain": "^1.0.0",
     "debounce-promise": "^3.1.2",
