fix(app): fix name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LeStudio Game List",
+  "name": "lestudio-game-list",
   "description": "Able to update your twitch category Id by on your processes",
   "version": "1.0.0",
   "private": true,
