--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
 
-      - run: pnpm run build
+      - run: pnpm run build --mode staging
 
       - name: Compile artifacts and upload them to github draft release
         # I use this action because it is capable of retrying multiple times if there are any issues with the distribution server
