--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lestudio-game-list",
   "description": "Able to update your twitch category Id by on your processes",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "private": true,
   "author": {
     "email": "contact@qlaffont.com",
@@ -62,6 +62,7 @@
     "typescript": "4.9.4",
     "unplugin-auto-expose": "0.0.4",
     "vite": "4.0.4",
+    "vite-plugin-static-copy": "^0.13.0",
     "vite-plugin-windicss": "^1.8.10",
     "vitest": "0.27.1",
     "vue-tsc": "1.0.13",
