--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lestudio-game-list",
   "description": "Able to update your twitch category Id by on your processes",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "private": true,
   "author": {
     "email": "contact@qlaffont.com",
@@ -35,6 +35,7 @@
     "appId": "com.github.qlaffont.lestudiogamelist"
   },
   "devDependencies": {
+    "@types/auto-launch": "^5.0.2",
     "@types/node": "18.11.13",
     "@types/ps-node": "^0.1.1",
     "@types/react": "^18.0.26",
@@ -71,6 +72,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^3.0.0",
     "ajv": "^8.12.0",
+    "auto-launch": "^5.0.5",
     "clsx": "^1.2.1",
     "debounce-promise": "^3.1.2",
     "electron-store": "^8.1.0",
